--- a/SimTECH/SimTECH/Pages/Racing/SignalIcon.razor
+++ b/SimTECH/SimTECH/Pages/Racing/SignalIcon.razor
@@ -5,14 +5,10 @@
 </MudPaper>
 
 @code {
-    [Parameter]
-    public double LapPercentage { get; set; }
-    [Parameter]
-    public string Signal { get; set; }
-    [Parameter]
-    public int Index { get; set; }
-    [Parameter]
-    public Size Size { get; set; } = Size.Small;
+    [Parameter] public double LapPercentage { get; set; }
+    [Parameter] public string Signal { get; set; }
+    [Parameter] public int Index { get; set; }
+    [Parameter] public Size Size { get; set; } = Size.Small;
 
     // We might want to make the following common somewhere
     private string _signalIcon
