--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -37,5 +37,5 @@
 @code {
     bool entrantsExpanded = true;
     bool factorsExpanded = true;
-    bool testExpanded = false;
+    //bool testExpanded = false;
 }
