--- a/SimTECH/SimTECH/Components/ScreenshotButton.razor
+++ b/SimTECH/SimTECH/Components/ScreenshotButton.razor
@@ -3,40 +3,40 @@
 <MudButton Variant="Variant.Outlined"
            Color="Color.Primary"
            StartIcon="@Icons.Material.Filled.Image"
+           FullWidth="@FullWidth"
            Disabled="@disabled"
            OnClick="TakeScreenshot"
            Class="@_classes"
            Style="@_styles">
-    @if (disabled)
-    {
-        <span>Copied!</span>
-    }
-    else
-    {
-        <span>Copy</span>
-    }
+    <span>@setText</span>
 </MudButton>
 
 @code {
     [Parameter] public string TargetId { get; set; }
+    [Parameter] public bool FullWidth { get; set; } = false;
     [Parameter] public string Class { get; set; } = string.Empty;
     [Parameter] public string Styles { get; set; } = string.Empty;
 
     private bool disabled = false;
+    private string setText = "Copy";
 
-    async Task TakeScreenshot()
+    private async Task TakeScreenshot()
     {
         disabled = true;
-        var clickTask = JS.InvokeVoidAsync("takeScreenshot", TargetId);
+
+        await JS.InvokeVoidAsync("takeScreenshot", TargetId);
 
         // Notice how we don't await this bad boi? This runs the task while not halting the page
         // Doesnt change back so its cringe
         //ShowClicked();
 
-        await Task.Delay(1500);
-        await clickTask;
+        setText = "Copied!";
 
+        await Task.Delay(1500);
+
+        setText = "Copy";
         disabled = false;
+
         StateHasChanged();
     }
 
