--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -4,35 +4,30 @@
 @inject RaceService _raceService
 @inject SeasonService _seasonService
 
-<PageTitle>Post Race</PageTitle>
+<PageTitle>Post race</PageTitle>
 
 <MudContainer MaxWidth="MaxWidth.False" Class="mt-4" id="postrace-container">
     @if (!loading)
     {
         <MudGrid Spacing="1">
             <MudItem xs=12>
-                <MudPaper Elevation="15" Height="200px" Class="pa-4">
+                <MudPaper Elevation="15" Height="75px" Class="pa-4">
                     <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center">
-                        <span style="width:30%"></span>
+                        <div>
+                            <MudText Typo="Typo.body2" Color="Color.Warning" Style="width: 30%">This page is quite unfinished</MudText>
+                            <MudText Typo="Typo.body2" Color="Color.Error">Wtf so much free space?</MudText>
+                        </div>
 
-                        <MudStack>
-                            <MudText Typo="Typo.h3">Post race</MudText>
-                            <MudText Color="Color.Warning">This page is quite unfinished</MudText>
-                        </MudStack>
+                        <MudText Typo="Typo.h3">Post race</MudText>
 
                         <MudButtonGroup Color="Color.Primary" Variant="Variant.Outlined" Style="width: 30%">
-                            <MudButton OnClick="GoToStandings">Standings</MudButton>
-                            <ScreenshotButton TargetId="postrace-container" />
+                            <MudButton FullWidth="true" OnClick="GoToStandings">Standings</MudButton>
+                            <ScreenshotButton TargetId="postrace-container" FullWidth="true" />
                         </MudButtonGroup>
                     </MudStack>
                 </MudPaper>
             </MudItem>
-            <MudItem xs="4">
-                <MudPaper Class="mud-height-full">
-                    <MudText Typo="Typo.body2" Color="Color.Error">Wtf am I going to put here?</MudText>
-                </MudPaper>
-            </MudItem>
-            <MudItem xs="4">
+            <MudItem xs="6">
                 <MudPaper Class="mud-height-full">
                     <MudText Typo="Typo.h5">Final standings</MudText>
                     <MudTable T="Result" Items="@Results.OrderBy(e => e.Position)" Dense="true" Class="extra-dense">
@@ -49,12 +44,14 @@
                                 }
                                 else
                                 {
-                                    <MudText Typo="Typo.button">@(context.Status)</MudText>
+                                    <MudText Typo="Typo.button" Style="@(ViewHelper.SetBackgroundColour(context.Status.StatusColour()))">
+                                        @context.Status
+                                    </MudText>
                                 }
                             </MudTd>
                             <MudTd>
                                 <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
-                                    <MudText>@(context.SeasonDriver.Driver.FullName)</MudText>
+                                    <MudText>@context.SeasonDriver.Driver.FullName</MudText>
                                     @if (context.Grid == 1)
                                     {
                                         <sup style="font-size: 0.7rem">P</sup>
@@ -72,7 +69,7 @@
                     </MudTable>
                 </MudPaper>
             </MudItem>
-            <MudItem xs="4">
+            <MudItem xs="6">
                 <MudStack Class="mud-height-full">
                     <MudPaper Height="50%">
                         <MudText Typo="Typo.h5">Race incidents</MudText>
@@ -88,9 +85,11 @@
                                 @foreach (var result in Results.Where(e => e.Incident != null))
                                 {
                                     <tr>
-                                        <td>@(result.SeasonDriver.Driver.FullName)</td>
+                                        <td>@result.SeasonDriver.Driver.FullName</td>
                                         <td>@(result.Incident?.Name)</td>
-                                        <td>@(result.Status)</td>
+                                        <td style="@(ViewHelper.SetBackgroundColour(result.Status.StatusColour()))">
+                                            @result.Status
+                                        </td>
                                     </tr>
                                 }
                             </tbody>
@@ -106,18 +105,17 @@
                             </HeaderContent>
                             <RowTemplate>
                                 <MudTd>
-                                    <MudText>@(context.Name)</MudText>
+                                    <MudText>@context.Name</MudText>
                                 </MudTd>
                                 <MudTd>
-                                    <MudText>@(context.Reason)</MudText>
+                                    <MudText>@context.Reason</MudText>
                                 </MudTd>
                                 <MudTd>
-                                    <MudText Typo="Typo.caption">@(context.Punishment)</MudText>
+                                    <MudText Typo="Typo.caption">@context.Punishment</MudText>
                                 </MudTd>
                             </RowTemplate>
                         </MudTable>
                     </MudPaper>
-
                 </MudStack>
             </MudItem>
         </MudGrid>
@@ -133,6 +131,7 @@
     List<GivenPenalty> Penalties;
 
     Dictionary<int, int> allotments;
+    int lowestScoring;
 
     List<DriverPenalty> DriverPenalties = new();
 
@@ -148,6 +147,8 @@
         Penalties = await _raceService.GetUnconsumedPenalties();
 
         allotments = Season.PointAllotments?.ToDictionary(e => e.Position, e => e.Points) ?? new();
+        if (allotments.Any())
+            lowestScoring = allotments.Keys.Max();
 
         _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
         {
@@ -156,7 +157,7 @@
             new BreadcrumbItem("Overview", href: $"overview/{Season.Id}"),
             new BreadcrumbItem("Raceweek", href: $"raceweek/{RaceId}"),
             new BreadcrumbItem("Race", href: $"race/{RaceId}"),
-            new BreadcrumbItem("Post race", href: $"postrace/{RaceId}", disabled: true),
+            new BreadcrumbItem("Postrace", href: $"postrace/{RaceId}", disabled: true),
         });
 
         loading = false;
@@ -194,6 +195,7 @@
                         Name = driverResult.SeasonDriver.Driver.FullName,
                         Reason = penalty.Incident.Name,
                         Punishment = penalty.Incident.Punishment,
+                        Styles = driverResult.Status.StatusColour(),
                     });
             }
         }
@@ -206,5 +208,6 @@
         public string Name { get; set; } = string.Empty;
         public string Reason { get; set; } = string.Empty;
         public int Punishment { get; set; }
+        public string Styles { get; set; } = Constants.DefaultBackground;
     }
 }
