--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonEngines.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonEngines.razor
@@ -12,11 +12,11 @@
     </MudPaper>
     <MudDataGrid T="SeasonEngine" Items="SeasonEngineData" Dense="true">
         <Columns>
-            <PropertyColumn Property="e => e.Name" />
-            <PropertyColumn Property="e => e.Power" />
-            <PropertyColumn Property="e => e.Reliability" />
-            <PropertyColumn Property="e => e.Rebadged" />
-            <TemplateColumn Sortable="false">
+            <PropertyColumn Property="e => e!.Name" />
+            <PropertyColumn Property="e => e!.Power" />
+            <PropertyColumn Property="e => e!.Reliability" />
+            <PropertyColumn Property="e => e!.Rebadged" />
+            <TemplateColumn T="SeasonEngine" Sortable="false">
                 <CellTemplate>
                     <MudButtonGroup>
                         <MudIconButton Size="Size.Small" Icon="@Icons.Material.Outlined.Edit" OnClick="@(async () => await UpdateEngine(context.Item))" />
